[package]
name = "usb-kvm"
version = "0.1.0"
authors = ["Sam Day <me@samcday.com>"]
edition = "2021"
publish = false

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
pixels = "0.13.0"
serde = "1.0.197"
ssmarshal = "1.0.0"
usb-gadget = { git = "https://github.com/surban/usb-gadget.git", rev = "897c511" }
usbd-hid-macros = "0.6.0"
winit = { version = "0.29.14", features = ["rwh_05", "ahash", "bytemuck", "memmap2", "percent-encoding", "rwh_06", "sctk", "sctk-adwaita", "wayland", "wayland-backend", "wayland-client", "wayland-csd-adwaita", "wayland-protocols", "wayland-protocols-plasma"], default-features = false }
