[package]
name = "usb-kvm"
version = "0.1.0"
authors = ["Sam Day <me@samcday.com>"]
edition = "2021"
publish = false

[features]
optimize = []
default = ["optimize"]

[dependencies]
pixels = "0.13.0"
serde = "1.0.197"
ssmarshal = "1.0.0"
usb-gadget = { git = "https://github.com/surban/usb-gadget.git", rev = "897c511" }
usbd-hid-macros = "0.6.0"
winit = { version = "0.29.14", features = ["rwh_05"] }
gud-gadget = { path = "../gud-gadget/gadget" }
clap = { version = "4.5.2", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
anyhow = "1.0.80"
ctrlc = { version = "3.4.4", features = ["termination"] }
ipc-channel = "0.18.0"
